[gd_scene load_steps=13 format=3 uid="uid://csi4qqxwojof8"]

[ext_resource type="Script" path="res://assets/scripts/gameCamera.gd" id="1_ay4xj"]
[ext_resource type="Script" path="res://assets/scripts/main_scene.gd" id="1_q882a"]
[ext_resource type="Texture2D" uid="uid://dtc3sa5vx2h7o" path="res://assets/sprites/blocks.PNG" id="3_wywra"]
[ext_resource type="PackedScene" uid="uid://0ylok07cdfm1" path="res://scenes/score.tscn" id="4_o5w38"]
[ext_resource type="PackedScene" uid="uid://dxklt8usixud2" path="res://scenes/rigid_circle.tscn" id="4_r0jip"]
[ext_resource type="PackedScene" uid="uid://dy2mqxg2v1g2b" path="res://scenes/pause.tscn" id="5_b2kw1"]
[ext_resource type="PackedScene" uid="uid://jy451i6j4lkk" path="res://scenes/death_scene.tscn" id="6_7gly6"]
[ext_resource type="PackedScene" uid="uid://p67m4folw68" path="res://scenes/store.tscn" id="8_004dn"]
[ext_resource type="PackedScene" uid="uid://c1ueau3u8vk35" path="res://scenes/last_chance.tscn" id="9_oh4ua"]
[ext_resource type="Script" path="res://assets/scripts/spawnNewBall.gd" id="10_w0idy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1iwo6"]
size = Vector2(1920, 98)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e5s8q"]
size = Vector2(137, 1098)

[node name="MainScene" type="Node2D"]
script = ExtResource("1_q882a")

[node name="score" parent="." instance=ExtResource("4_o5w38")]
offset_left = 961.0
offset_top = 537.0
offset_right = 961.0
offset_bottom = 537.0

[node name="Wall" type="Node2D" parent="."]
modulate = Color(0.152941, 0.152941, 0.152941, 1)

[node name="invisibleBorderWall" type="Node2D" parent="Wall"]

[node name="top" type="StaticBody2D" parent="Wall/invisibleBorderWall"]
position = Vector2(10, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/invisibleBorderWall/top"]
position = Vector2(950, -39)
shape = SubResource("RectangleShape2D_1iwo6")

[node name="bottom" type="StaticBody2D" parent="Wall/invisibleBorderWall"]
position = Vector2(0, 1133)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/invisibleBorderWall/bottom"]
position = Vector2(960, -4)
shape = SubResource("RectangleShape2D_1iwo6")

[node name="left" type="StaticBody2D" parent="Wall/invisibleBorderWall"]
position = Vector2(-10, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/invisibleBorderWall/left"]
position = Vector2(-58.5, 540)
shape = SubResource("RectangleShape2D_e5s8q")

[node name="right" type="StaticBody2D" parent="Wall/invisibleBorderWall"]
position = Vector2(1983, 9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/invisibleBorderWall/right"]
position = Vector2(5.5, 540)
shape = SubResource("RectangleShape2D_e5s8q")

[node name="visibleBorderBorderWall" type="Node2D" parent="Wall"]

[node name="left" type="Sprite2D" parent="Wall/visibleBorderBorderWall"]
position = Vector2(-6.4, 540.098)
scale = Vector2(0.2, 17.27)
texture = ExtResource("3_wywra")
hframes = 2
vframes = 2

[node name="right" type="Sprite2D" parent="Wall/visibleBorderBorderWall"]
position = Vector2(1926.4, 540.098)
scale = Vector2(0.2, 17.27)
texture = ExtResource("3_wywra")
hframes = 2
vframes = 2

[node name="top" type="Sprite2D" parent="Wall/visibleBorderBorderWall"]
position = Vector2(960.003, -6.39998)
rotation = 1.5708
scale = Vector2(0.2, 30.0001)
texture = ExtResource("3_wywra")
hframes = 2
vframes = 2

[node name="bottom" type="Sprite2D" parent="Wall/visibleBorderBorderWall"]
position = Vector2(960.003, 1086.4)
rotation = 1.5708
scale = Vector2(0.2, 30.0001)
texture = ExtResource("3_wywra")
hframes = 2
vframes = 2

[node name="gameCamera" type="Camera2D" parent="."]
position = Vector2(960, 540)
script = ExtResource("1_ay4xj")
backgroundColor = Color(0.0941176, 0.0941176, 0.0941176, 1)
noise_shake_speed = 10.0
noise_shake_strength = 10.0

[node name="Label" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 26.0
scale = Vector2(3, 3)
text = "x:y"

[node name="blockHolder" type="Node2D" parent="."]

[node name="aroundTheScreenHolder" type="Node2D" parent="."]

[node name="enemyHolder" type="Node2D" parent="."]

[node name="scoreBlockHolder" type="Node2D" parent="."]

[node name="spinBlockHolder" type="Node2D" parent="."]
position = Vector2(54, 1012)

[node name="playerHolder" type="Node2D" parent="."]

[node name="rigidCircle" parent="playerHolder" instance=ExtResource("4_r0jip")]

[node name="newHurtBlock" type="Timer" parent="."]
one_shot = true

[node name="newCoinBlock" type="Timer" parent="."]
one_shot = true

[node name="newSpinBlock" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="Pause" parent="CanvasLayer" instance=ExtResource("5_b2kw1")]
visible = false

[node name="deathScene" parent="CanvasLayer" instance=ExtResource("6_7gly6")]
visible = false

[node name="Store" parent="CanvasLayer" instance=ExtResource("8_004dn")]
visible = false

[node name="lastChance" parent="CanvasLayer" instance=ExtResource("9_oh4ua")]
visible = false

[node name="spawnNewBall" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_w0idy")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/spawnNewBall"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.882353)

[node name="Label" type="Label" parent="CanvasLayer/spawnNewBall"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.972549, 0.45098, 0.894118, 1)
theme_override_font_sizes/font_size = 900
text = "3"

[node name="Timer" type="Timer" parent="CanvasLayer/spawnNewBall"]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="newHurtBlock" to="." method="_on_new_hurt_block_timeout"]
[connection signal="timeout" from="newCoinBlock" to="." method="_on_new_coin_block_timeout"]
[connection signal="timeout" from="newSpinBlock" to="." method="_on_new_spin_block_timeout"]
[connection signal="pressed" from="CanvasLayer/Pause/VBoxContainer/restartButton" to="." method="_on_restart_button_pressed"]
[connection signal="timeout" from="CanvasLayer/spawnNewBall/Timer" to="." method="_on_timer_timeout"]

[editable path="CanvasLayer/Pause"]
